# zhiliao

./: .gitignore  .gitmodules
backend/: main.py  pyproject.toml
backend/app/: __init__.py
backend/app/models/: __init__.py
backend/app/routes/: presets.py  records.py
backend/app/storage/: __init__.py  identity.py  storage.py
frontend/: package.json
frontend/src/: app.html
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/[presetId]/: +page.server.ts  +page.svelte  +server.ts
frontend/src/routes/records/: +page.server.ts  +page.svelte
frontend/src/routes/records/[recordId]/: +page.server.ts  +page.svelte
