[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["CNSeniorious000 <wjj123345567@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.100.0" }
uvicorn = { extras = ["standard"], version = "^0.23.1" }
aiofiles = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
